GNOME Bugzilla – Bug 752100
rtpklvdepay: fix build error
Last modified: 2015-08-16 13:41:07 UTC
v_len is of type guint64, but while print the value(16 + len_size + v_len) G_GSIZE_FORMAT is being used instead of G_GUINT64_FORMAT
Created attachment 307045 [details] [review] fix build error
Thanks. commit ffe9cbc1f6866457e04976bfdbd05da0e87b7769 Author: Vineeth TM <vineeth.tm@samsung.com> Date: Wed Jul 8 08:59:49 2015 +0900 rtpklvdepay: fix printf format compiler warning v_len is of type guint64, but while print the value(16 + len_size + v_len) G_GSIZE_FORMAT is being used instead of G_GUINT64_FORMAT https://bugzilla.gnome.org/show_bug.cgi?id=752100